--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -2,10 +2,12 @@ name: deploy-container
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
     paths:
       - "packages/container/**"
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 defaults:
   run:
