--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -3,6 +3,7 @@ name: deploy-container
 on:
   push:
     branches: [ "main" ]
+    paths: [ "packages/container/**" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
